--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
+
 body {
-  font-size: 14px;
-  color:navy;
+    font-size: 14px;
+    color: navy;
 }
 
-  hi {
+h1 {
     color: #ffc;
     background-color: #009;
-  }
-    
+}
