--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 
-body {
-    font-size: 14px;
-    color: navy;
-}
-
 h1 {
-    color: #ffc;
-    background-color: #009;
+    color: yellow;
+    background-color: blue;
 }
