--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 
+body {
+    font-family: arial, helvetica, sans-serif;
+    font-size: 14px;
+}
+
 h1 {
-    color: yellow;
-    background-color: blue;
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+a {
+    text-decoration: none;
+}
+
+strong {
+    font-style: italic;
+    text-transform: uppercase;
 }
