--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url(landscape.jpg);  
+    background-image: url(images/landscape.jpg);  
     background-color: #ed2bff;
 }
 
