--- a/css/newindex.css
+++ b/css/newindex.css
@@ -211,6 +211,12 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
+
+.button-link {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 @keyframes pop-in {
 0% {
 opacity: 0;
