--- a/css/newindex.css
+++ b/css/newindex.css
@@ -13,15 +13,14 @@ backdrop-filter: blur(10px);
 border-radius: 20px;
 border:1px solid rgba(255, 0, 0, 0.233);
 box-shadow: 0 8px 32px 0 rgba(255, 0, 0, 0.10);
-    width: 700px;
+    width: 1200px;
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
     animation: pop-in 1s ease-out forwards;
-    max-width: fit-content;
-    max-width: 700px;
     margin-top: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
+    max-width: 1200px;
 }
 
 .hello {
@@ -95,7 +94,7 @@ box-shadow: 0 8px 32px 0 rgba(255, 0, 0, 0.10);
     border-radius: 8px;
     border-width: 2px;
     border-style: solid;
-    width: 650px;
+    width: 1150px;
     transition-property: all;
     transition-duration: .6s;
     display: block;
@@ -123,7 +122,7 @@ a {
     border-radius: 8px;
     border-width: 2px;
     border-style: solid;
-    width: 650px;
+    width: 1150px;
     transition-property: all;
     transition-duration: .6s;
     display: block;
@@ -193,30 +192,10 @@ a {
 }
 
 .navbar {
-    text-align: center;
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
-textarea {
-    display: block;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-    width: 600px;
-    height: 50px;
-}
-
-.button-preview {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.button-link {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
 @keyframes pop-in {
 0% {
 opacity: 0;
