--- a/indexv2.css
+++ b/indexv2.css
@@ -1,5 +1,5 @@
 * {
-    background: url('images/9szz.gif');
+    background: url('9szz.gif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: cover;
